--- a/OAS/tapi-photonic-media.yaml
+++ b/OAS/tapi-photonic-media.yaml
@@ -998,7 +998,7 @@ paths:
           description: "tapi.common.NameAndValue"
           schema:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
-  ? /data/tapi-common:context/profile={uuid}/tapi-photonic-media:transceiver-profile/transceiver-explicit-profile/compatible-organizational-mode
+  ? /data/tapi-common:context/profile={uuid}/tapi-photonic-media:transceiver-profile/transceiver-explicit-profile/compatible-organizational-mode={profile-uuid}
   : get:
       tags:
       - "tapi-photonic-media"
@@ -1010,6 +1010,11 @@ paths:
         description: "Id of profile"
         required: true
         type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of compatible-organizational-mode"
+        required: true
+        type: "string"
       responses:
         "400":
           description: "Internal error"
@@ -1017,7 +1022,7 @@ paths:
           description: "tapi.common.ProfileRef"
           schema:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
-  ? /data/tapi-common:context/profile={uuid}/tapi-photonic-media:transceiver-profile/transceiver-explicit-profile/compatible-standard-mode
+  ? /data/tapi-common:context/profile={uuid}/tapi-photonic-media:transceiver-profile/transceiver-explicit-profile/compatible-standard-mode={profile-uuid}
   : get:
       tags:
       - "tapi-photonic-media"
@@ -1027,6 +1032,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of profile"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of compatible-standard-mode"
         required: true
         type: "string"
       responses:
@@ -104327,11 +104337,15 @@ definitions:
     type: "object"
     properties:
       compatible-organizational-mode:
+        type: "array"
         description: "none"
-        $ref: "#/definitions/tapi.common.ProfileRef"
+        items:
+          $ref: "#/definitions/tapi.common.ProfileRef"
       compatible-standard-mode:
+        type: "array"
         description: "none"
-        $ref: "#/definitions/tapi.common.ProfileRef"
+        items:
+          $ref: "#/definitions/tapi.common.ProfileRef"
       common-explicit:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.CommonExplicit"
