--- a/OAS/tapi-oam.yaml
+++ b/OAS/tapi-oam.yaml
@@ -1,41 +1,10 @@
 ---
 swagger: "2.0"
 info:
-  description: "\nThis module contains TAPI Path Computation Model definitions.\n\
-    Source: TapiPathComputation.uml\n- The TAPI YANG models included in this TAPI\
-    \ release are a *normative* part of the TAPI SDK.\n- The YANG specifications have\
-    \ been generated from the corresponding UML model using the [EAGLE UML2YANG mapping\
-    \ tool]\n<https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-uml-yang>\n\
-    and further edited manually to comply with the [ONMI IISOMI UML2YANG mapping guidelines]\n\
-    <https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-home>\n\
-    with further details available at <https://github.com/Open-Network-Models-and-Interfaces-ONMI/TAPI-Documentation/tree/v2.6.0/ToolingGuidelines>\n\
-    - Status of YANG model artifacts can be determined by referring to the corresponding\
-    \ UML artifacts.\nAs described in the UML models, some artifacts are considered\
-    \ *experimental*, and thus the corresponding YANG artifacts.\n- The LF ONMI TAPI\
-    \ release process does not guarantee backward compatibility of YANG models across\
-    \ major versions of TAPI releases.\nThe YANG model backward compatibility criteria\
-    \ are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models\
-    \ included in this release may not be backward compatible with previous TAPI releases.\n\
-    License: This module is distributed under the Apache License 2.0.,\nThis module\
-    \ contains TAPI Common Model definitions.\nSource: TapiCommon.uml\n- The TAPI\
-    \ YANG models included in this TAPI release are a *normative* part of the TAPI\
-    \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
-    \ model using the [EAGLE UML2YANG mapping tool]\n<https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-uml-yang>\n\
-    and further edited manually to comply with the [ONMI IISOMI UML2YANG mapping guidelines]\n\
-    <https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-home>\n\
-    with further details available at <https://github.com/Open-Network-Models-and-Interfaces-ONMI/TAPI-Documentation/tree/v2.6.0/ToolingGuidelines>\n\
-    - Status of YANG model artifacts can be determined by referring to the corresponding\
-    \ UML artifacts.\nAs described in the UML models, some artifacts are considered\
-    \ *experimental*, and thus the corresponding YANG artifacts.\n- The LF ONMI TAPI\
-    \ release process does not guarantee backward compatibility of YANG models across\
-    \ major versions of TAPI releases.\nThe YANG model backward compatibility criteria\
-    \ are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models\
-    \ included in this release may not be backward compatible with previous TAPI releases.\n\
-    License: This module is distributed under the Apache License 2.0.,\nThis module\
-    \ contains TAPI Notification Model definitions.\nSource: TapiNotification.uml\n\
-    - The TAPI YANG models included in this TAPI release are a *normative* part of\
-    \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
-    \ UML model using the [EAGLE UML2YANG mapping tool]\n<https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-uml-yang>\n\
+  description: "\nThis module contains TAPI Notification Model definitions.\nSource:\
+    \ TapiNotification.uml\n- The TAPI YANG models included in this TAPI release are\
+    \ a *normative* part of the TAPI SDK.\n- The YANG specifications have been generated\
+    \ from the corresponding UML model using the [EAGLE UML2YANG mapping tool]\n<https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-uml-yang>\n\
     and further edited manually to comply with the [ONMI IISOMI UML2YANG mapping guidelines]\n\
     <https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-home>\n\
     with further details available at <https://github.com/Open-Network-Models-and-Interfaces-ONMI/TAPI-Documentation/tree/v2.6.0/ToolingGuidelines>\n\
@@ -62,10 +31,10 @@ info:
     \ are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models\
     \ included in this release may not be backward compatible with previous TAPI releases.\n\
     License: This module is distributed under the Apache License 2.0.,\nThis module\
-    \ contains TAPI OAM Model definitions.\nSource: TapiOam.uml\n- The TAPI YANG models\
-    \ included in this TAPI release are a *normative* part of the TAPI SDK.\n- The\
-    \ YANG specifications have been generated from the corresponding UML model using\
-    \ the [EAGLE UML2YANG mapping tool]\n<https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-uml-yang>\n\
+    \ contains TAPI Connectivity Model definitions.\nSource: TapiConnectivity.uml\n\
+    - The TAPI YANG models included in this TAPI release are a *normative* part of\
+    \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
+    \ UML model using the [EAGLE UML2YANG mapping tool]\n<https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-uml-yang>\n\
     and further edited manually to comply with the [ONMI IISOMI UML2YANG mapping guidelines]\n\
     <https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-home>\n\
     with further details available at <https://github.com/Open-Network-Models-and-Interfaces-ONMI/TAPI-Documentation/tree/v2.6.0/ToolingGuidelines>\n\
@@ -92,7 +61,37 @@ info:
     \ are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models\
     \ included in this release may not be backward compatible with previous TAPI releases.\n\
     License: This module is distributed under the Apache License 2.0.,\nThis module\
-    \ contains TAPI Connectivity Model definitions.\nSource: TapiConnectivity.uml\n\
+    \ contains TAPI Common Model definitions.\nSource: TapiCommon.uml\n- The TAPI\
+    \ YANG models included in this TAPI release are a *normative* part of the TAPI\
+    \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
+    \ model using the [EAGLE UML2YANG mapping tool]\n<https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-uml-yang>\n\
+    and further edited manually to comply with the [ONMI IISOMI UML2YANG mapping guidelines]\n\
+    <https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-home>\n\
+    with further details available at <https://github.com/Open-Network-Models-and-Interfaces-ONMI/TAPI-Documentation/tree/v2.6.0/ToolingGuidelines>\n\
+    - Status of YANG model artifacts can be determined by referring to the corresponding\
+    \ UML artifacts.\nAs described in the UML models, some artifacts are considered\
+    \ *experimental*, and thus the corresponding YANG artifacts.\n- The LF ONMI TAPI\
+    \ release process does not guarantee backward compatibility of YANG models across\
+    \ major versions of TAPI releases.\nThe YANG model backward compatibility criteria\
+    \ are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models\
+    \ included in this release may not be backward compatible with previous TAPI releases.\n\
+    License: This module is distributed under the Apache License 2.0.,\nThis module\
+    \ contains TAPI OAM Model definitions.\nSource: TapiOam.uml\n- The TAPI YANG models\
+    \ included in this TAPI release are a *normative* part of the TAPI SDK.\n- The\
+    \ YANG specifications have been generated from the corresponding UML model using\
+    \ the [EAGLE UML2YANG mapping tool]\n<https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-uml-yang>\n\
+    and further edited manually to comply with the [ONMI IISOMI UML2YANG mapping guidelines]\n\
+    <https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-home>\n\
+    with further details available at <https://github.com/Open-Network-Models-and-Interfaces-ONMI/TAPI-Documentation/tree/v2.6.0/ToolingGuidelines>\n\
+    - Status of YANG model artifacts can be determined by referring to the corresponding\
+    \ UML artifacts.\nAs described in the UML models, some artifacts are considered\
+    \ *experimental*, and thus the corresponding YANG artifacts.\n- The LF ONMI TAPI\
+    \ release process does not guarantee backward compatibility of YANG models across\
+    \ major versions of TAPI releases.\nThe YANG model backward compatibility criteria\
+    \ are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models\
+    \ included in this release may not be backward compatible with previous TAPI releases.\n\
+    License: This module is distributed under the Apache License 2.0.,\nThis module\
+    \ contains TAPI Path Computation Model definitions.\nSource: TapiPathComputation.uml\n\
     - The TAPI YANG models included in this TAPI release are a *normative* part of\
     \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
     \ UML model using the [EAGLE UML2YANG mapping tool]\n<https://github.com/Open-Network-Models-and-Interfaces-ONMI/onmi-iisomi-uml-yang>\n\
@@ -108,7 +107,7 @@ info:
     \ included in this release may not be backward compatible with previous TAPI releases.\n\
     License: This module is distributed under the Apache License 2.0."
   version: "2.6.0"
-  title: "tapi-path-computation,tapi-common,tapi-notification,tapi-streaming,tapi-oam,tapi-topology,tapi-connectivity\
+  title: "tapi-notification,tapi-streaming,tapi-connectivity,tapi-topology,tapi-common,tapi-oam,tapi-path-computation\
     \ API"
 host: "localhost:1234"
 consumes:
